Refactor from review suggestions